...
      "category": {
        "type": "String"
      }
    }
  },
  "error": "Error",
  "success": "Success",
  "transactionSaved": "Transaction saved successfully",
  "newCategory": "New Category",
  "categoryNameHint": "Category Name",
  "enterNameHint": "Enter name",
  "addNoteHint": "Add a note...",
  "selectCategoryError": "Select a category",
  "send": "Send",
  "receive": "Receive",
  "welcomeUser": "Welcome, {name}",
  "@welcomeUser": {
    "placeholders": {
      "name": {
        "type": "String"
      }
    }
...
